--- a/css/style.css
+++ b/css/style.css
@@ -20,10 +20,14 @@
     font-style: italic;
 }
 
+* {
+    box-sizing: border-box;
+}
+
 
 
 body {
-    font-family: 'Lato', sans-serif;
+    font-family: 'Raleway', sans-serif;
     background-color: #3d0906;
     color: white;
     margin: 0;
@@ -35,20 +39,21 @@ body {
 }
 
 .cv-container {
-    width: 900px;
-    background-color: #6a1d18;
-    padding: 20px;
+    width:  1160px;
+    background-color: #3d0906;
     border-radius: 8px;
+    margin: 0 auto;
 }
 
-header {
+ header {
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
     align-items: center;
-    background-color: #3d0906;
-    padding: 20px;
-    border-bottom: 4px solid #ca9e6d;
+    justify-content: space-between;
+    color: white;
+    margin-top: 20px;
 }
+
 
 .profile-section {
     text-align: center;
@@ -60,49 +65,85 @@ header {
     height: 150px;
     object-fit: cover;
     border: 3px solid white;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
-
-h1, h2 {
-    margin: 10px 0;
-}
-
 .contact-section {
-    text-align: right;
+    width: 100%;
+    display: flex;
     color: #d6d6d6;
+    background-color: #2c1d27;
+    justify-content: space-evenly;
+    padding: 5px 0;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.contact-section p {
+    margin: 0;
+}
+
+.contact-section a {
+    color: white; 
+    text-decoration: none;
+    transition: color 0.3s;
+}
+
+.contact-section a:hover {
+    color: #ca9e6d; 
+}
+
+h1, h2, h3, h4 {
+    font-family: 'Lato', sans-serif;
+}
+
+.about p {
+    padding-left: 20px;
+    text-indent: 20px;
+}
+
+.left-column h3 {
+    font-family: 'Lato', sans-serif;
+    color: black;
 }
 
 main {
     display: flex;
     justify-content: space-between;
-    padding: 20px 0;
 }
 
 .left-column {
     width: 30%;
     background-color: #3d0906;
-    padding: 20px;
-    border-radius: 8px;
+    padding: 10px 0;
 }
 
 .right-column {
     width: 65%;
+    background-color: white;
+    color: black;
+    padding-left: 20px;
+}
+.education {
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
 
 h3 {
     background-color: #ca9e6d;
     padding: 10px;
-    border-radius: 5px;
-    margin-bottom: 10px;
 }
 
-section {
-    margin-bottom: 20px;
+.right-column h3 {
+    position: relative;
+    padding-right: 10px;
 }
 
-ul {
-    list-style-type: none;
-    padding: 0;
+.right-column h3:hover {
+    border-left: 4px solid #6a1d18; 
 }
+
+
+/* 
 
 footer {
     text-align: center;
@@ -118,4 +159,21 @@ footer {
 footer p {
     margin-top: 10px;
     color: #ca9e6d;
+} */
+
+/* .social-links a img {
+    transition: opacity 0.3s ease;
 }
+
+.social-links a img:hover {
+    opacity: 0.7; 
+} */
+
+/* a {
+    text-decoration: none; 
+    transition: text-decoration 0.3s ease;
+}
+
+a:hover {
+    text-decoration: underline; 
+} */
